--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <div class="about-main">
                     <div class="about-image">
                         <!-- 📸 ADD ABOUT/WORKSPACE IMAGE HERE -->
-                        <img src="../Images/professional_image2.jpg" alt="Workspace">
+                        <img src="./Images/professional_image2.jpg" alt="Workspace">
                         <!-- <div class="about-image-placeholder">
                             <i class="fas fa-laptop-code"></i>
                             <p>Add workspace or professional photo here</p>
