--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         <div class="profile-image-container">
                             <div class="profile-ring"></div>
                             <!-- 📸 ADD YOUR PROFILE PHOTO HERE -->
-                            <img src="../Images/professional_image.jpg" alt="Profile" class="profile-photo">
+                            <img src="./Images/professional_image.jpg" alt="Profile" class="profile-photo">
                             <!-- <div class="profile-placeholder">
                                 <i class="fas fa-user"></i>
                                 <div class="image-note">Add your photo here</div>
