Updated Image Error

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <!-- Project 1 -->
                 <div class="project-card-large">
                     <div class="project-visual">
-                        <img src="../Images/Hackathon_FPT.jpg" alt="TRIPLEADT Project">
+                        <img src="./Images/Hackathon_FPT.jpg" alt="TRIPLEADT Project">
                         <div class="project-badge">
                             <i class="fas fa-trophy"></i> Award Winner 2024
                         </div>
@@ -417,7 +417,7 @@
                         </div> -->
                     </div>
                     <div class="project-visual">
-                        <img src="../Images/Fschools_stempetition_2023.jpg" alt="TechCare Project">
+                        <img src="./Images/Fschools_stempetition_2023.jpg" alt="TechCare Project">
                         <div class="project-badge">
                             <i class="fas fa-trophy"></i> Award Winner 2023
                         </div>
@@ -427,7 +427,7 @@
                 <!-- Project 3 -->
                 <div class="project-card-large">
                     <div class="project-visual">
-                        <img src="../Images/iyrc-competition.jpg" alt="IYRC Competition">
+                        <img src="./Images/iyrc-competition.jpg" alt="IYRC Competition">
                         <div class="project-badge">
                             <i class="fas fa-globe"></i> International
                         </div>
